Test de fonctionnement des Scenes, fonctionnelles.

--- a/ProjetIn55/ProjetIn55.vcxproj
+++ b/ProjetIn55/ProjetIn55.vcxproj
@@ -135,6 +135,7 @@
     <ClInclude Include="Core\Updatable.h" />
     <ClInclude Include="Core\Window.h" />
     <ClInclude Include="Models\Model.h" />
+    <ClInclude Include="TestScene.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
