--- a/ProjetIn55/ProjetIn55.vcxproj.filters
+++ b/ProjetIn55/ProjetIn55.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClInclude Include="Models\Model.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="TestScene.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
