--- a/ProjetIn55/ProjetIn55.vcxproj
+++ b/ProjetIn55/ProjetIn55.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="Graphics\Texture.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Models\Mesh.cpp" />
+    <ClCompile Include="Models\Model.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core\Node.h" />
