--- a/ProjetIn55/ProjetIn55.vcxproj
+++ b/ProjetIn55/ProjetIn55.vcxproj
@@ -121,6 +121,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Character.cpp" />
     <ClCompile Include="Core\Node.cpp" />
     <ClCompile Include="Core\Scene.cpp" />
     <ClCompile Include="Core\ShaderProgram.cpp" />
@@ -131,6 +132,7 @@
     <ClCompile Include="Models\Model.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Character.h" />
     <ClInclude Include="Core\Node.h" />
     <ClInclude Include="Core\Renderable.h" />
     <ClInclude Include="Core\Scene.h" />
